erDiagram
    EVENTS {
        int id PK
        string title
        string description
        string banner_img_url
        date date
        string location
        int capacity
        decimal sub_price
    }

    ACTIVITIES {
        int id PK
        string title
        time scheduled_at
        int event_id FK
    }

    SPEAKERS {
        int id PK
        string name
        string specialty
        string bio
    }

    CHECK_INS {
        int id PK
        datetime timestamp
        string access_point
        int registration_id FK
    }

    SUBSCRIPTIONS {
        int id PK
        string name
        string email
        date registered_at
    }

    EVENTS ||--o{ ACTIVITIES : contains
    EVENTS ||--o{ SUBSCRIPTIONS : contains

    ACTIVITIES }o--|{ SPEAKERS : presented_by

    SUBSCRIPTIONS ||--o| CHECK_INS : has      
